--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ header .input-group button:active{
     margin: 10px 0;
 }
 .details .products .selled span{
-    font-size: 20px;
+    font-size: 16px;
     padding: 5px 20px 5px 40px;
     position: relative;
 }
@@ -294,4 +294,259 @@ footer .bottom .image{
 }
 footer .bottom ul li{
     font-size: 14px;
+}
+
+/* category */
+.category, .brand, .price{
+    color: #555;
+    margin-bottom: 30px;
+}
+.category h3, .brand h3, .color h3, .price h3{
+    font-size: 18px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+.category .list ul li{
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    font-size: 15px;
+    display: flex;
+}
+.category .list ul li .text{
+    margin-left: 20px;
+}
+.brand .list ul li{
+    display: flex;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.brand .list ul li .image{
+    margin-left: 20px;
+}
+
+.brand .list ul li .image img{
+    width: 55%;
+}
+
+.color{
+    float: left;
+    clear: both;
+    color: #555;
+    margin-bottom: 20px;
+}
+
+.color .list ul li{
+    float: left;
+    width: 25%;
+    margin-bottom: 10px;
+}
+
+.color .list ul li label{
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+}
+
+.color .list ul li:first-child label{
+    background-color: black;
+    border: 1px solid black;
+}
+
+.color .list ul li:nth-child(2) label{
+    background-color: blue;
+    border: 1px solid blue;
+}
+
+.color .list ul li:nth-child(3) label{
+    background-color: white;
+    border: 1px solid black;
+}
+
+.color .list ul li:nth-child(4) label{
+    background-color: orange;
+    border: 1px solid orange;
+}
+
+.color .list ul li:nth-child(5) label{
+    background-color: green;
+    border: 1px solid green;
+}
+
+.color .list ul li:nth-child(6) label{
+    background-color: peru;
+    border: 1px solid peru;
+}
+
+.color .list ul li:nth-child(7) label{
+    background-color: blueviolet;
+    border: 1px solid blueviolet;
+}
+
+.color .list ul li:nth-child(8) label{
+    background-color: brown;
+    border: 1px solid brown;
+}
+
+.color .list ul li input{
+    display: none;
+}
+
+.content .form{
+    position: relative;
+}
+
+#sort{
+    position: absolute;
+    right: 0;
+    top: -70px;
+    padding: 10px;
+    background-color: #ddd;
+    border-radius: 5px;
+    font-size: 14px;
+    color: #555;
+}
+
+#sort:focus{
+    outline: none;
+}
+
+.content .bottom{
+    margin-top: 20px;
+}
+
+.content .bottom ul li{
+    margin: 0 2px;
+}
+
+.content .bottom ul li:first-child{
+    margin-left: 0;
+}
+
+.content .bottom ul li:last-child{
+    margin-right: 0;
+}
+
+.content .bottom ul li a{
+    border-radius: 50% !important;
+    background-color: #3c3c3c;
+    color: white;
+    height: 40px;
+    width: 40px;
+    text-align: center;
+}
+
+.content .bottom ul li a.active{
+    border: none;
+    background-color: #086e7d;
+}
+
+.content .bottom ul li a:hover{
+    background-color: #086e7d;
+}
+
+main h1{
+    font-size: 30px;
+    color: #555;
+}
+
+.main__content{
+    margin-top: 70px;
+}
+
+.main__content .title{
+    position: relative;
+}
+
+.main__content .title .left{
+    padding: 10px 20px;
+    position: absolute;
+    top: -30px;
+    text-transform: uppercase;
+    font-size: 25px;
+    font-style: italic;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.main__content .title .right{
+    position: absolute;
+    top: -30px;
+    left: 35%;
+    font-size: 16px;
+    font-style: italic;
+    font-weight: bold;
+}
+
+.main__content .post{
+    margin-top: 50px;
+    line-height: 25px;
+    color: #666;
+    text-align: justify;
+}
+
+.main__content h2{
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 20px;
+    color: #555;
+}
+.main__content p{
+    margin-bottom: 20px;
+}
+
+.main__content h3{
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #555;
+}
+
+.main__content img{
+    width: 100%;
+    border-radius: 5px;
+}
+
+main .top .breadcrumb{
+    border-bottom: 1px solid #bdbdbd;
+    padding: 15px 0;
+    margin-bottom: 40px;
+}
+
+main .top .breadcrumb li a{
+    text-decoration: none;
+    color: #086e7d;
+}
+
+.contact .name{
+    font-size: 22px;
+    font-weight: bold;
+    font-style: italic;
+    text-transform: uppercase;
+    text-align: center;
+    border-radius: 30px;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
+.contact .hotline, .contact .online{
+    font-weight: bold;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    font-size: 22px;
+    margin-bottom: 10px;
+}
+.contact .hotline span, .contact .online span{
+    display: block;
+}
+.contact .hotline span.phone{
+    text-transform: uppercase;
+    font-size: 37px;
+}
+
+.contact .online span{
+    font-size: 35px;
 }
